<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/createDatabaseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="140sp"
            android:text="@string/create_a_database"
            android:textAllCaps="false"/>
        <EditText
            android:id="@+id/databaseNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_a_name_of_the_database"
            android:text="@string/customer_db"
            android:textAllCaps="false"
            tools:ignore="TextFields" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/createTableButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="140sp"
            android:text="@string/create_a_table"
            android:textAllCaps="false"/>
        <EditText
            android:id="@+id/tableNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_a_name_of_the_table"
            android:text="@string/employee"
            android:textAllCaps="false"
            tools:ignore="TextFields" />
    </LinearLayout>

    <TextView
        android:id="@+id/statusTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/status"/>

</LinearLayout>